syntax = "proto3";

package v1.observability;

option go_package = "github.com/accuknox/knoxAutoPolicy/protos/v1/observability";

service Observability {
    rpc GetSysObservabilityData (SysObsData) returns (SysObsResponse);
    rpc ClearDb(SysObsData) returns (DbClearStatus);
}

message SysObsData {
    string clusterName = 1;
    string namespace = 2;
    string containerName =3;
    string labels = 4;
}

message SysObsResponseData {
    string ClusterName = 1;
    string NameSpace = 2;
    string Labels = 3;
    string ContainerName = 4;
    repeated SysProcessFileData Resources = 5;
}

message SysProcessFileData {
    string fromSource = 1;
    repeated string processPaths = 2;
    repeated string filePaths = 3;
    repeated string networkPaths = 4;
}

message SysObsResponse {
    repeated SysObsResponseData Data = 1;
}

message DbClearStatus {
    string Status = 1;
}